# outlook-meetings

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
outlook_meetings/: cli.py  outlookmeet.py
tests/: test_outlook_meetings.py
